
Nov 22, 2006 - chris 
o completely rewrote the freelist - elements are now sorted, and access is 
    a lot faster. also, elements are merged, if possible.
o fixed a bug; if the root page is split, the address of the root page
    was not stored correctly in the database header

Nov 12, 2006 - chris 
o completely rewrote the blob storage - blobs are now stored in one big 
    chunk, and not splitted into pages
o replaced read/write with pread/pwrite
o fixed a small bug related to a performance improvement on Nov 5th
    (removed too many memset's...)

Nov 09, 2006 - chris 
o fetching in-memory-blobs created a memory leak if the record data 
    was allocated by the user

Nov 07, 2006 - chris 
o blobs which were overwritten (and therefore were deleted) were not 
    added to the freelist

Nov 05, 2006 - chris 
o fixed a tiny memory leak in blob_erase
o replaced linear search in btree_get_slot and btree_insert with 
    binary search, got significant performance improvements
o removed some unnecessary memsets, after allocating a new page
o relaxed the "minkey"-rule: after erasing, pages are now merged when 
    there are <=4 elements in the page

Nov 04, 2006 - chris ---------------------------------------------------
                      release of hamsterdb-0.1pre2

Oct 26, 2006 - chris
o fixed a bug in the freelist - the return value was ignored, when 
    allocating a new page. if the cache was too small, NULL was returned
    and the library crashed

Oct 24, 2006 - chris
o fixed minor issues for compiling on 32bit machines

Oct 18, 2006 - chris
o fixed a bug in the freelist - too many freelist pages were allocated
o fixed a bug: when allocating pages, and the page was removed from the
    freelist, and the page type was not set correctly

Oct 12, 2006 - chris
o fixed a bug in blob_allocate when allocating big blobs
o fixed a bug when overwriting keys, and the blob was empty, tiny or 
    small (<=sizeof(ham_offset_t))

Oct 8, 2006 - chris